--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://nekmayne.github.io/Clicker",
+  "homepage": "https://nekmayne.github.io/Clicker",
   "name": "clicker",
   "private": true,
   "version": "0.0.0",
